Fixes: z-index: 1

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -272,6 +272,7 @@ a.menu-link {
     transition: all 0.5s;
     margin-top: -20px;
     margin-left: 0;
+    z-index: 1;
 }
 
 @media screen and (max-width: 500px) {
